2015-04-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in, include/pqxx/compiler-public.hxx,
 include/pqxx/connection.hxx, include/pqxx/dbtransaction.hxx,
 include/pqxx/errorhandler.hxx, include/pqxx/except.hxx,
 include/pqxx/field.hxx, include/pqxx/largeobject.hxx,
 include/pqxx/nontransaction.hxx, include/pqxx/robusttransaction.hxx,
 include/pqxx/subtransaction.hxx, include/pqxx/tablereader.hxx,
 include/pqxx/tablewriter.hxx, include/pqxx/transaction.hxx,
 test/test004.cxx, test/test023.cxx, test/test079.cxx, test/test087.cxx,
 test/test/094.cxx, test/test_helpers.hxx, test/unit/test_errorhandler.cxx,
 test/unit/test_notification.cxx:
 - Use C++14 "final" if available.
 - Use C++14 "override" if available.
2015-04-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test049.cxx:
 - No longer needs to include internal compiler tweaks for count_if().
2015-04-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/vc-libpqxx.mak.template, win32/vc-test.mak.template:
 - Use :: instead of : in each non-phony rule definition.
 - Quote filenames for "copy" command.
 - Thanks Daniel Polski for getting this working on Visual Studio 2013.
2015-01-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/VisualStudio2013:
 - Sample headers for Visual Studio 2013.
2015-01-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
 - Remove promise that read_capabilities won't throw exceptions.
2015-01-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test_helpers.hxx:
 - Show actual value before expected value; more helpful if it gets truncated.
 test/unit/test_escape.cxx:
 - Print escaped string for debugging.  Test fails against early 9.x postgres.
 - Test against unprintable characters.
2015-01-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/lint:
 - Change mktemp naming scheme.
 tools/maketemporary, tools/pqxx-fulltest, tools/pre-release-check,
 tools/release:
 - Use $() instead of ``.